--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ header nav a.activo {
 
 .pelicula-principal {
   font-size: 16px;
-  min-height: 46.62em;
+  min-height: 64.62em;
   color: #fff;
   background: linear-gradient(rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0.5) 100%),
     url(https://www.themoviedb.org/t/p/original/jlGmlFOcfo8n5tURmhC7YVd4Iyy.jpg);
@@ -68,7 +68,7 @@ header nav a.activo {
   background-size: cover;
   margin-bottom: 3.12em;
   display: flex;
-  align-items: flex-end;
+  align-items: center;
 }
 
 .pelicula-principal .container {
@@ -155,8 +155,8 @@ header nav a.activo {
   margin-right: 2px;
 }
 
-.container-titulo-controles .indicadores button:hover,
-.container-titulo-controles .indicadores button .activo {
+.container-titulo-controles .indicadores :hover,
+.container-titulo-controles .indicadores .activo {
   background: red;
 }
 
